--- a/app/src/main/res/layout/information_card.xml
+++ b/app/src/main/res/layout/information_card.xml
@@ -1,60 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <androidx.cardview.widget.CardView
+    android:layout_height="match_parent">
+    <ImageView
         android:id="@+id/card_container"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
-        android:backgroundTint="@color/purple_500"
-        app:cardCornerRadius="20dp"
-        android:layout_margin="10dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="400dp"
+        android:layout_height="200dp"
+        android:background="@drawable/card_container"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        >
-        <ImageView
-            android:id="@+id/card_avatar"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@drawable/ic_launcher_background"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="20dp"
-            android:adjustViewBounds="true"
+        android:layout_margin="20dp"
+        />
+    <TextView
+        android:id="@+id/name_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:text="Name: "
+        android:textColor="@color/white"
+        android:textSize="24sp"
+        app:layout_constraintStart_toStartOf="@+id/card_container"
+        app:layout_constraintTop_toTopOf="@+id/card_container" />
 
-            />
-        <TextView
-            android:id="@+id/name_tv"
-            android:text="Name: "
-            android:textSize="24sp"
-            android:textColor="@color/white"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="80dp"
-            />
+    <TextView
+        android:id="@+id/phone_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:text="phone number: "
+        android:textColor="@color/white"
+        android:textSize="24sp"
+        app:layout_constraintStart_toStartOf="@+id/card_container"
+        app:layout_constraintTop_toBottomOf="@+id/name_tv" />
 
-        <TextView
-            android:id="@+id/phone_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="phone number: "
-            android:textSize="24sp"
-            android:textColor="@color/white"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="130dp"
-            />
-
-        <TextView
-            android:id="@+id/description_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="description: "
-            android:textSize="24sp"
-            android:textColor="@color/white"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="180dp"
-            />
-    </androidx.cardview.widget.CardView>
+    <TextView
+        android:id="@+id/description_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:text="description: "
+        android:textColor="@color/white"
+        android:textSize="24sp"
+        app:layout_constraintStart_toStartOf="@+id/card_container"
+        app:layout_constraintTop_toBottomOf="@+id/phone_tv" />
+    />
 </androidx.constraintlayout.widget.ConstraintLayout>
