--- a/app/src/main/res/layout/information_card.xml
+++ b/app/src/main/res/layout/information_card.xml
@@ -2,17 +2,19 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:clickable="true">
+
     <ImageView
         android:id="@+id/card_container"
         android:layout_width="400dp"
         android:layout_height="200dp"
-        android:background="@drawable/card_container"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_margin="20dp"
-        />
+        android:background="@drawable/card_container"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/name_tv"
         android:layout_width="wrap_content"
@@ -45,5 +47,4 @@
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="@+id/card_container"
         app:layout_constraintTop_toBottomOf="@+id/phone_tv" />
-    />
 </androidx.constraintlayout.widget.ConstraintLayout>
